adc/v2.0/templates/adc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adc-svc
  labels:
    k8s-app: adc
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    k8s-app: adc
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adc
  labels:
    k8s-app: adc
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: adc
  template:
    metadata:
      labels:
        k8s-app: adc
        version: v1
    spec:
      containers:
      - name: adc
        image: registry.thunisoft.com:5000/artery/artery6-developercommunity:0.0.1-SNAPSHOT
        ports:
        - containerPort: 8080
        resources:
        volumeMounts:
          - mountPath: /adc-data
            name: adc
      volumes:
      - name: adc
        persistentVolumeClaim:
          claimName: adc-pvc
