adc/v2.0/templates/ingress.yaml
##################################################################################################
# adc ingress
##################################################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: adc-thunisoft-com
  annotations:
    kubernetes.io/ingress.class: nginx
    # 开启use-regex，启用path的正则匹配 
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: adc.thunisoft.com
    http:
      paths: 
      # 不同path转发到不同端口
      - path: /
        backend:
          serviceName: adc-svc
          servicePort: 8080
